--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:padding="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/info_window_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +10,10 @@
     android:id="@+id/info_window_marker_name"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/info_window_marker_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/info_window_marker_address"
         android:layout_width="wrap_content"
