--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="56dp"
+    android:paddingTop="20dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
     android:id="@+id/layer1"
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="92dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="20dp"/>
 
     <LinearLayout
         android:layout_width="300dp"
@@ -40,8 +40,8 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <Button
@@ -51,7 +51,7 @@
             android:layout_weight="0.5"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:background="@drawable/gradient"
+            android:background="@drawable/oval_shape"
             android:text="@string/sign_in"
             android:textColor="@android:color/white"
             android:layout_marginRight="10dp"/>
@@ -63,12 +63,21 @@
             android:layout_weight="0.5"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:background="@drawable/gradient"
+            android:background="@drawable/oval_shape"
             android:text="@string/sign_up"
             android:textColor="@android:color/white"
             android:layout_marginLeft="10dp"/>
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="---------------   OR   ---------------"
+        android:textStyle="bold"
+        android:textSize="22sp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity = "center"/>
     <LinearLayout
         android:layout_marginTop="20dp"
         android:orientation="vertical"
