--- a/app/src/main/res/layout/fragment_awards.xml
+++ b/app/src/main/res/layout/fragment_awards.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/awards_lv"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/awards_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
