--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="20dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
+    android:padding="30dp"
     android:id="@+id/layer1"
     android:background="@drawable/gradient">
-
     <ImageView android:src="@drawable/eco_wr"
         android:layout_width="wrap_content"
-        android:layout_height="92dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="20dp"/>
 
     <LinearLayout
@@ -24,7 +22,8 @@
         android:background="@color/bg_screen1"
         android:orientation="vertical"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingRight="24dp"
+        android:layout_marginTop="40dp">
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -36,14 +35,12 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword" />
-
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:orientation="horizontal">
-
         <Button
             android:id="@+id/email_sign_in_button"
             android:layout_width="match_parent"
@@ -68,36 +65,5 @@
             android:textColor="@android:color/white"
             android:layout_marginLeft="10dp"/>
 
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="---------------   OR   ---------------"
-        android:textStyle="bold"
-        android:textSize="22sp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity = "center"/>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/facebookIcon"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/sign_in_facebook" />
-
-        <ImageView
-            android:id="@+id/googleIcon"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/sign_in_google" />
     </LinearLayout>
 </LinearLayout>
