--- a/app/src/main/res/layout/video_item_layout.xml
+++ b/app/src/main/res/layout/video_item_layout.xml
@@ -2,19 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:orientation="horizontal"
+    android:padding="10dp">
+
     <ImageView
         android:id="@+id/video_thumbnail"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
+        android:gravity="center_vertical"
         android:scaleType="centerCrop" />
+
     <TextView
         android:id="@+id/video_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center_vertical"
+        android:paddingTop="20dp"
+        android:paddingLeft="10dp"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
