--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
+        android:layout_centerHorizontal="true"
         android:id="@+id/imageIcon"
         android:layout_width="wrap_content"
         android:layout_height="@android:dimen/thumbnail_height"
-        android:layout_gravity="center_horizontal"
         android:src="@drawable/eco_wr"
         android:layout_marginTop="30dp"/>
     <TextView
