--- a/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_items.xml
@@ -22,8 +22,8 @@
     <item
         android:id="@+id/action_fragment_leaderboard"
         android:enabled="true"
-        android:icon="@drawable/ic_record"
-        android:title="Records"
+        android:icon="@drawable/ic_leaderboard"
+        android:title="Leaderboard"
         app:showAsAction="always|withText"/>
     <item
         android:id="@+id/action_fragment_profile"
