--- a/app/src/main/res/menu/profile_edit_menu.xml
+++ b/app/src/main/res/menu/profile_edit_menu.xml
@@ -5,5 +5,6 @@
     android:id="@+id/profile_edit_action"
     android:title="@string/profile_edit_action"
     app:showAsAction="never"
+    android:orderInCategory="0"
     />
 </menu>
