--- a/app/src/main/res/menu/welcome_menu.xml
+++ b/app/src/main/res/menu/welcome_menu.xml
@@ -3,5 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_sign_out"
-        android:title="@string/action_sign_out" />
+        android:title="@string/action_sign_out"
+        app:showAsAction="ifRoom"/>
 </menu>
