--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,9 @@
 
     <ImageView android:src="@drawable/eco_wr"
         android:layout_width="wrap_content"
-        android:layout_height="92dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"/>
 
     <LinearLayout
@@ -23,6 +24,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@color/bg_screen1"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
         <EditText
@@ -73,13 +75,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="-----------------------  OR  -----------------------"
+        android:text="---------------------------  OR  ---------------------------"
         android:textSize = "20dp"/>
 
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
