--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="60dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
     android:id="@+id/layer1"
@@ -13,8 +12,9 @@
 
     <ImageView android:src="@drawable/eco_wr"
         android:layout_width="wrap_content"
-        android:layout_height="92dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="20dp"/>
 
     <LinearLayout
@@ -24,8 +24,7 @@
         android:background="@color/bg_screen1"
         android:orientation="vertical"
         android:paddingLeft="@dimen/padding_width"
-        android:paddingRight="@dimen/padding_width"
-        android:layout_marginTop="30dp">
+        android:paddingRight="@dimen/padding_width">
         <EditText
             android:id="@+id/sign_up_name"
             android:layout_width="match_parent"
@@ -60,10 +59,56 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/oval_shape"
         android:text="@string/sign_up"
         android:textColor="@android:color/white" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="---------------------------  OR  ---------------------------"
+        android:textSize = "20dp"/>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="@dimen/padding_width"
+            android:paddingRight="@dimen/padding_width">
+
+            <Button
+                android:id="@+id/facebookIcon"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_weight="1"
+                android:background="@drawable/sign_up_facebook"
+                android:layout_marginRight="10dp"/>
+
+            <Button
+                android:id="@+id/googleIcon"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_weight="1"
+                android:background="@drawable/sign_up_google"
+                android:layout_marginLeft="10dp"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="30dp"
